...
            Section {
                Button {
                    showMarkAllRoomsAsReadAlert = true
                } label: {
                    Text("Mark all rooms as read")
                }.alert("Are you sure you want to mark all the rooms as read?", isPresented: $showMarkAllRoomsAsReadAlert) {
                    Button("Cancel", role: .cancel) { }
                    
                    Button("Yes") {
                        context.send(viewAction: .markAllRoomsAsRead)
                    }
                }
            } footer: {
...
